Added company and copyright notice

--- a/PanoramicData.ChartMagic/PanoramicData.ChartMagic.csproj
+++ b/PanoramicData.ChartMagic/PanoramicData.ChartMagic.csproj
@@ -11,7 +11,8 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>ChartMagic</Description>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
-
+		<Company>Panoramic Data Limited</Company>
+		<Copyright>Panoramic Data Limited 2021</Copyright>
 		<PackageReleaseNotes>
 			Initial release
 		</PackageReleaseNotes>
