--- a/PanoramicData.ChartMagic/PanoramicData.ChartMagic.csproj
+++ b/PanoramicData.ChartMagic/PanoramicData.ChartMagic.csproj
@@ -31,12 +31,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="SkiaSharp" Version="3.119.0" />
+		<PackageReference Include="Svg.Skia" Version="3.0.2" />
 		<PackageReference Include="Nerdbank.GitVersioning" Version="3.7.115">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Svg" Version="3.4.7" />
-		<PackageReference Include="System.Drawing.Common" Version="9.0.5" />
+		<PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
 	</ItemGroup>
 
 </Project>
